test/files/neg/t6631.check
t6631.scala:2: error: invalid escape '\x' not one of [\b, \t, \n, \f, \r, \\, \", \'] at index 0 in "\x". Use \\ for literal \.
  s"""\x"""
      ^
1 error
